fix z-index of preview screen shots, adjust background colors, add mute functionality

--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,9 @@ body{
 
 }
 h1{
-  text-decoration: underline;
+  color: #FF4500;
+  text-shadow:  0px 0px 1px  black;
+  /*text-decoration: underline;*/
 }
 .main-text-font{
   font-family: 'Open Sans', sans-serif;
@@ -80,8 +82,8 @@ h1{
   /*background: rgba(255, 0, 0, 0.5);*/
   background: rgba(255,255,255, 0.4);
   /*background: white;*/
-  border: 1px solid rgba(0,0,0,0.1);
-  box-shadow: 1px 2px 10px 0px black;
+  border: 1px solid rgba(0,0,0,0.3);
+  /*box-shadow: 1px 2px 1px 0px black;*/
   border-radius: 3px
 }
 .selected-panel{
