--- a/src/components/ProjectsContainer/ProjectsContainer.css
+++ b/src/components/ProjectsContainer/ProjectsContainer.css
@@ -2,7 +2,7 @@
 
 .project-preview-container{
   height: 200px;
-  /*height: 300px;*/ 
+  /*height: 300px;*/
 
 }
 .preview-inner-shell{
@@ -18,6 +18,7 @@
   height: 100%;
   min-width: 150%;
   filter:blur(5px);
+  z-index: -1
 }
  .project-preview-container:hover .preview-screenshot{
    filter: none;
@@ -44,10 +45,12 @@
 
 
 .project-preview-name{
+
   font-family: 'Fugaz One', cursive;
   color: white;
   text-shadow: 1px 1px black;
-  font-size: 2em
+  font-size: 2em;
+  z-index: 99 !important
   }
 
 
